src/test/deca/context/invalid/test_pass_3_var_already_declared.deca
// Description:
//    Program testing a var already exist  
//
// Results:
//    error
//
// History:
//    Created on 13/01/2025

{
    int x;
    float x;
}
